Basic support for synch of file permissions( chmod ), needs testing.

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>psyncho</name>
 	<comment></comment>
 	<projects>
+		<project>pyfilesystem</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
